[tool.poetry]
name = "repl_python3_lessgreater"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
pafy = "^0.5.5"
discord-py-slash-command = "^3.0.1"
PyNaCl = "^1.4.0"
animec = "^0.3.5"
DiscordUtils = "^1.3.4"
requests = "^2.26.0"
bs4 = "^0.0.1"
praw = "^7.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
